[gd_scene format=3 uid="uid://dho26e37qso4"]

[ext_resource type="Script" uid="uid://co68kgqs8rsng" path="res://Scenes/Blob/blob_sounds.gd" id="1_86n82"]
[ext_resource type="AudioStream" uid="uid://bjrqlqqefd5xm" path="res://Assets/SFX/rubber_stretch_01.wav" id="2_a5qy4"]
[ext_resource type="AudioStream" uid="uid://dde5mtgfk3cqm" path="res://Assets/SFX/rubber_stretch_02.wav" id="3_dg2xg"]
[ext_resource type="AudioStream" uid="uid://u37eo0dctjpu" path="res://Assets/SFX/rubber_stretch_03.wav" id="4_jgp6a"]
[ext_resource type="AudioStream" uid="uid://t57lfud8ss8f" path="res://Assets/SFX/squish_01.wav" id="5_8rxsp"]
[ext_resource type="AudioStream" uid="uid://5katghe4y5ia" path="res://Assets/SFX/squish_02.wav" id="6_46b1f"]
[ext_resource type="AudioStream" uid="uid://mc87ncc4x48t" path="res://Assets/SFX/squish_03.wav" id="7_25d71"]
[ext_resource type="AudioStream" uid="uid://cd8g5g81gfgn2" path="res://Assets/SFX/whoosh_01.wav" id="8_h3po6"]
[ext_resource type="AudioStream" uid="uid://byqtkpx0riga2" path="res://Assets/SFX/whoosh_02.wav" id="9_1pvvj"]
[ext_resource type="AudioStream" uid="uid://b11s2ogfoyjgc" path="res://Assets/SFX/whoosh_03.wav" id="10_p4jh1"]
[ext_resource type="AudioStream" uid="uid://pkft5gbitpuu" path="res://Assets/SFX/whoosh_04.wav" id="11_ege7j"]
[ext_resource type="AudioStream" uid="uid://brjq0xt47ib6c" path="res://Assets/SFX/whoosh_05.wav" id="12_e5v36"]
[ext_resource type="AudioStream" uid="uid://caddl4q1wtrgg" path="res://Assets/SFX/bounce_01.wav" id="13_l6fv7"]
[ext_resource type="AudioStream" uid="uid://ddo2mqtqfvelt" path="res://Assets/SFX/bounce_02.wav" id="14_fuaqb"]
[ext_resource type="AudioStream" uid="uid://ccj2n4ip683o0" path="res://Assets/SFX/bounce_03.wav" id="15_4ilx1"]
[ext_resource type="AudioStream" uid="uid://b54weg1ixr8d5" path="res://Assets/SFX/bounce_04.wav" id="16_3setg"]
[ext_resource type="AudioStream" uid="uid://b3evjmf46xay5" path="res://Assets/SFX/bounce_06.wav" id="18_o7psr"]
[ext_resource type="AudioStream" uid="uid://brbvq4se2chlk" path="res://Assets/SFX/boner_01.wav" id="19_b3vh8"]
[ext_resource type="AudioStream" uid="uid://dhvlkviduyhaf" path="res://Assets/SFX/boner_02.wav" id="20_to0m4"]
[ext_resource type="AudioStream" uid="uid://b0i8twnwushg5" path="res://Assets/SFX/boner_03.wav" id="21_ienxd"]
[ext_resource type="AudioStream" uid="uid://dfautmltv8p3n" path="res://Assets/SFX/boner_04.wav" id="22_mn81p"]
[ext_resource type="AudioStream" uid="uid://cgvne8djant31" path="res://Assets/SFX/boner_05.wav" id="23_ywf6d"]

[node name="BlobSounds" type="Node2D" unique_id=2132559176]
script = ExtResource("1_86n82")
stretch = Array[AudioStream]([ExtResource("2_a5qy4"), ExtResource("3_dg2xg"), ExtResource("4_jgp6a")])
squish = Array[AudioStream]([ExtResource("5_8rxsp"), ExtResource("6_46b1f"), ExtResource("7_25d71")])
whoosh = Array[AudioStream]([ExtResource("8_h3po6"), ExtResource("9_1pvvj"), ExtResource("10_p4jh1"), ExtResource("11_ege7j"), ExtResource("12_e5v36")])
bounce = Array[AudioStream]([ExtResource("13_l6fv7"), ExtResource("14_fuaqb"), ExtResource("15_4ilx1"), ExtResource("16_3setg"), ExtResource("18_o7psr")])
fling = Array[AudioStream]([ExtResource("19_b3vh8"), ExtResource("20_to0m4"), ExtResource("21_ienxd"), ExtResource("22_mn81p"), ExtResource("23_ywf6d")])

[node name="Player1" type="AudioStreamPlayer2D" parent="." unique_id=735435180]
unique_name_in_owner = true

[node name="Player2" type="AudioStreamPlayer2D" parent="." unique_id=1687854210]
unique_name_in_owner = true

[node name="Player3" type="AudioStreamPlayer2D" parent="." unique_id=121922309]
unique_name_in_owner = true
